fix form fields, add hover effects on images, fix interactive windows, center slider, fix button on mobile

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
   background: $main-black;
-  padding: 50px 0;
+  padding: 50px 0 75px 0;
 
   &__container {
     @include grid;
