--- a/src/styles/blocks/help.scss
+++ b/src/styles/blocks/help.scss
@@ -10,6 +10,7 @@
   height: 100vh;
   transform: translateX(100%);
   transition: $all-transition;
+  overflow: scroll;
 
   &__container {
     @include grid;
