--- a/src/styles/blocks/language.scss
+++ b/src/styles/blocks/language.scss
@@ -11,6 +11,7 @@
   height: 100vh;
   transform: translateX(100%);
   transition: $all-transition;
+  overflow: scroll;
 
   &__navigation {
     margin-top: 40px;
