--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -10,6 +10,7 @@
   background-color: rgb(25, 21, 54);
   height: 100vh;
   transform: translateX(100%);
+  overflow: scroll;
   transition: $all-transition;
 
   &__navigation {
