--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -1,6 +1,7 @@
 @import '../utils';
 
 .swiper {
+  justify-self: center;
   width: 280px;
   height: 210px;
   overflow: hidden;
