--- a/src/styles/blocks/tech.scss
+++ b/src/styles/blocks/tech.scss
@@ -57,7 +57,7 @@
 
   &__text {
     color: $gray;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: 400;
     line-height: 150%;
   }
@@ -70,10 +70,11 @@
     display: none;
 
     flex-direction: column;
+    padding: 20px 10px;
     gap: 15px;
-    background: rgba(5, 4, 11, 0.8);
+    border-radius: 4px;
+    background: rgb(25, 21, 54);
     position: absolute;
-    z-index: 5;
     height: 170px;
     width: 280px;
     top: -180px;
