--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -156,6 +156,14 @@ body {
   display: block!important;
 }
 
+.input-before {
+  transition: $all-transition;
+
+  &::before {
+    transform: scale(1)!important;
+  }
+}
+
 
 
 
@@ -273,6 +281,16 @@ body {
 
       align-items: center;
       gap: 32px;
+      padding: 15px;
+      border: 1px solid transparent;
+      transition: $all-transition;
+
+      &:hover {
+        transform: translateY(-10px);
+        border: 1px solid #05C2DF;
+        border-radius: 4px;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+      }
     }
 
     &__content {
@@ -304,6 +322,7 @@ body {
     &__swiper {
       grid-row: 1 / 3;
       height: 290px;
+      justify-self: auto;
     }
   }
 
@@ -415,6 +434,16 @@ body {
 
       gap: 25px;
       align-items: center;
+      padding: 15px;
+      border: 1px solid transparent;
+      transition: $all-transition;
+
+      &:hover {
+        transform: translateY(-10px);
+        border: 1px solid #05C2DF;
+        border-radius: 4px;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+      }
     }
 
     &__content {
